CHATS_SIT/force-app/main/default/objects/sfsit_t_auth_hist__x.object
<CustomObject>
    <description>sfsit$t_auth_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_auth_hist</externalName>
    <fields>
        <fullName>amt_actv_auth__c</fullName>
        <description>amt_actv_auth</description>
        <externalDeveloperName>amt_actv_auth</externalDeveloperName>
        <label>Authorization Activity Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_rgstr_auth__c</fullName>
        <description>amt_rgstr_auth</description>
        <externalDeveloperName>amt_rgstr_auth</externalDeveloperName>
        <label>Authorization Registration Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_transp_auth__c</fullName>
        <description>amt_transp_auth</description>
        <externalDeveloperName>amt_transp_auth</externalDeveloperName>
        <label>Authorization Transportation Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_tfr_provr__c</fullName>
        <description>cde_reason_tfr_provr</description>
        <externalDeveloperName>cde_reason_tfr_provr</externalDeveloperName>
        <label>Reason code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_rel_provr__c</fullName>
        <description>cde_rel_provr</description>
        <externalDeveloperName>cde_rel_provr</externalDeveloperName>
        <label>Provider&apos;s Loc/Relationship to Child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv_auth__c</fullName>
        <description>dte_begin_effv_auth</description>
        <externalDeveloperName>dte_begin_effv_auth</externalDeveloperName>
        <label>Autorization Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv_auth__c</fullName>
        <description>dte_end_effv_auth</description>
        <externalDeveloperName>dte_end_effv_auth</externalDeveloperName>
        <label>Autorization end Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Auth ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_auth_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_auth_hist__c</fullName>
        <description>idn_auth_hist</description>
        <externalDeveloperName>idn_auth_hist</externalDeveloperName>
        <label>History ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_auth_tfr__c</fullName>
        <description>idn_auth_tfr</description>
        <externalDeveloperName>idn_auth_tfr</externalDeveloperName>
        <label>Transfer auth iD</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_office__c</fullName>
        <description>idn_office</description>
        <externalDeveloperName>idn_office</externalDeveloperName>
        <label>office id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Funding Program</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_auth_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_auth_addnl__c</fullName>
        <description>ind_auth_addnl</description>
        <externalDeveloperName>ind_auth_addnl</externalDeveloperName>
        <label>Additional Auth Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_chk_fees_parent__c</fullName>
        <description>ind_chk_fees_parent</description>
        <externalDeveloperName>ind_chk_fees_parent</externalDeveloperName>
        <label>Parent Check Fee</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_wrkld__c</fullName>
        <description>nbr_seq_wrkld</description>
        <externalDeveloperName>nbr_seq_wrkld</externalDeveloperName>
        <label>Number Sequence workload</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization History</label>
    <pluralLabel>Authorization History</pluralLabel>
</CustomObject>